# TeamTrialTracker

./: .gitignore  Cargo.toml  README.md  uma.user-words
.data/: uma_colours.json
.tessdata/: uma.user-patterns  uma.user-words
src/: colour.rs  image_helper.rs  io_helper.rs  main.rs  ocr.rs  ocrs.rs  plot.rs  tess.rs  uma.rs
