[package]
name = "TeamTrialTracker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.149"
plotly = { version = "0.14" }
plotly_static = { version = "0.1.0", features = ["geckodriver", "webdriver_download"] }
image = "0.25.9"
chrono = "0.4.44"
rten = "0.24.0"
ocrs = "0.12.2"
strsim = "0.11.1"
serde_json_pretty = "0.1.0"
serde = "1.0.228"

# https://github.com/robertknight/ocrs/issues/117
[profile.dev.package.rten]
opt-level = 3

[profile.dev.package.rten-base]
opt-level = 3

[profile.dev.package.rten-gemm]
opt-level = 3

[profile.dev.package.rten-simd]
opt-level = 3

[profile.dev.package.rten-tensor]
opt-level = 3

[profile.dev.package.rten-model-file]
opt-level = 3

[profile.dev.package.rten-onnx]
opt-level = 3

[profile.dev.package.rten-shape-inference]
opt-level = 3

[profile.dev.package.rten-vecmath]
opt-level = 3

[profile.dev.package.rten-imageproc]
opt-level = 3

