[package]
name = "TeamTrialTracker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.149"
plotly = { version = "0.14" }
plotly_static = { version = "0.1.0", features = ["geckodriver", "webdriver_download"] }
image = "0.25.9"
chrono = "0.4.44"
rten = "0.24.0"
ocrs = "0.12.2"
strsim = "0.11.1"
serde_json_pretty = "0.1.0"
serde = "1.0.228"
imageproc = "0.26.1"

# https://github.com/robertknight/ocrs/issues/117
# The image processing part is also slow on dev profile without optimization.
[profile.dev]
opt-level = 3

